# MEDMCQ261225

./: DEPLOYMENT.md  EMAIL_QUICKSTART.md  EMERGENT_CODE_UPDATE_INSTRUCTIONS.md  EMERGENT_DEPLOY_GUIDE.md  GMAIL_SETUP_GUIDE.md  LAWN_MAINTENANCE_APP_FEASIBILITY.md  README.md  lawn-quote-calculator-poc.js  lawn-quote-web-example.html  package.json  test_result.md
.emergent/: emergent.yml  summary.txt
backend/: .env  .env.example  EMAIL_SETUP.md  adaptive_learning.py  ai_service.py  auth_service.py  cli.py  email_client_service.py  email_service.py  models.py  pyproject.toml  requirements.txt  server.py  storage_service.py  tenant_config.py  tenant_middleware.py  une_priority_questions.xlsx
backend/migrations/: __init__.py  add_tenant_id.py
extracted_questions/: COMPLETE_MCQ_System_Year2_UNE.xlsx  Enhanced_Exam_Questions.xlsx  FINAL_MCQ_Database_Year1_Year2_UNE.xlsx  MCQ_Study_Questions_Year2_FULL.xlsx  MCQ_Year1_Study_Questions.xlsx
frontend/: .env
frontend/public/: index.html  sample_questions.xlsx
frontend/src/: App.css  App.js  (+1 more)
medical-report-agent/: .gitignore  BACKUP_CODE.md  CODE_BACKUP_2026-01-26_051058.txt  CREATE-BACKUP.ps1  Create-Desktop-Shortcut.ps1  DATA_PRIVACY_FAQ.md  DEMO_RESULTS.md  DESKTOP_ICON_GUIDE.md  INDEX.md  INSTALL-DESKTOP-ICON.ps1  Launch-Medical-Reports.bat  Medical-Report-Agent.desktop  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  WINDOWS_SETUP.md  create-backup.sh  install_desktop_icon.sh  launch_gui.sh  launch_medical_reports.sh  requirements.txt  set_api_key.sh  setup.sh  setup_windows_wsl.sh  test_server.py  web_app.py
(+47 files in other folders)
