[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medmcq-cli"
version = "1.0.0"
description = "CLI tool for MedMCQ platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
]

[project.scripts]
medmcq = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
